--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,7 +12,7 @@
   <meta property="og:title" content="<%= site.title %>">
   <meta property="og:site_name" content="<%= site.title %>">
   <meta property="og:url" content="<%= site.title %>">
-  <meta property="og:image" content="<%= site.title %>/favicon.ico">
+  <meta property="og:image" content="<%= site.title %>/background.png">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title><%= site.title %></title>
   <style><%- css.style -%></style>
