--- a/src/index.ejs
+++ b/src/index.ejs
@@ -11,8 +11,8 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="<%= site.title %>">
   <meta property="og:site_name" content="<%= site.title %>">
-  <meta property="og:url" content="<%= site.title %>">
-  <meta property="og:image" content="<%= site.title %>/background.png">
+  <meta property="og:url" content="<%= site.url %>">
+  <meta property="og:image" content="<%= site.url %>/background.png">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title><%= site.title %></title>
   <style><%- css.style -%></style>
