--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="hero">
-    <h1>cppvoxel</h1>
+    <svg viewbox="0 0 31 5" xmlns="http://www.w3.org/2000/svg"><path fill="#FFF" d="M0 1h1v3H0zm1-1h2v1H1zm0 4h2v1H1zm3-4h1v5H4zm1 0h1v1H5zm1 1h1v1H6zM5 2h1v1H5zm3-2h1v5H8zm1 0h1v1H9zm1 1h1v1h-1zM9 2h1v1H9zm3-2h1v4h-1zm2 0h1v4h-1zm-1 4h1v1h-1zm4-4h1v1h-1zm-1 1h1v3h-1zm2 0h1v3h-1zm-1 3h1v1h-1zm3-4h1v2h-1zm0 3h1v2h-1zm2-3h1v2h-1zm0 3h1v2h-1zm-1-1h1v1h-1zm3-2h1v5h-1zm1 0h2v1h-2zm0 4h2v1h-2zm0-2h1v1h-1zm3-2h1v5h-1zm1 4h2v1h-2z"/></svg>
     <p>The Noah's voxel engine</p>
   </div>
   <main>
