--- a/src/style.scss
+++ b/src/style.scss
@@ -73,13 +73,14 @@ h2{
   height: 50vh;
   padding: 0 4rem;
   background-image: url("background.png");
-  background-attachment: fixed;
-  background-position: center;
+  // background-attachment: fixed;
+  background-position: center 80%;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   box-shadow: 0 .1rem 1rem rgba(0, 0, 0, .2);
 
   @include mobile{
@@ -87,24 +88,17 @@ h2{
     padding: 0 1rem;
   }
 
-  h1, p{
-    color: #FFF;
-    text-shadow: 0 .1rem .3rem rgba(0, 0, 0, .3);
-  }
-
-  h1{
-    font-size: 4rem;
-    text-transform: lowercase;
-  
-    @include mobile{
-      font-size: 3rem;
-    }
+  svg{
+    height: 80px;
+    filter: drop-shadow(.1rem .1rem .7rem rgba(0, 0, 0, .5));
   }
 
   p{
-    margin: 0;
+    margin: 1rem 0 0 0 ;
+    color: #FFF;
     font-weight: 700;
     letter-spacing: .1rem;
+    text-shadow: .1rem .1rem .7rem rgba(0, 0, 0, .5);
 
     @include mobile{
       font-size: .9rem;
