--- a/src/style.scss
+++ b/src/style.scss
@@ -19,9 +19,12 @@ $border-radius: .2rem;
   scroll-behavior: smooth;
 }
 
+html, body{
+  min-height: 100vh;
+}
+
 body{
   margin: 0;
-  background-color: #F5F5F5;
   font-family: Montserrat, Arial, sans-serif;
   display: flex;
   flex-direction: column;
@@ -31,19 +34,23 @@ body{
 }
 
 footer{
-  padding-bottom: .3rem;
-  color: #555;
+  width: 100%;
+  padding: .3rem 0;
+  background-color: #000;
+  color: #FFF;
   font-size: .8rem;
+  text-align: center;
 }
 
 main{
-  width: 80%;
-  padding: 2rem 0;
+  width: 100%;
+  padding: 2rem 10%;
+  background-color: #F5F5F5;
   flex: 1;
+  z-index: 1;
 
   @include mobile{
-    width: 90%;
-    padding: 1rem 0;
+    padding: 2rem 5%;
   }
 }
 
@@ -72,20 +79,33 @@ h2{
   width: 100%;
   height: 50vh;
   padding: 0 4rem;
-  background-image: url("background.png");
-  // background-attachment: fixed;
-  background-position: center 80%;
-  background-repeat: no-repeat;
-  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   box-shadow: 0 .1rem 1rem rgba(0, 0, 0, .2);
+  position: relative;
 
   @include mobile{
     height: 30vh;
     padding: 0 1rem;
+  }
+
+  &:before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-image: url("/background.png");
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  }
+
+  svg, p{
+    position: relative;
   }
 
   svg{
