--- a/src/index.ejs
+++ b/src/index.ejs
@@ -13,6 +13,9 @@
   <meta property="og:site_name" content="<%= site.title %>">
   <meta property="og:url" content="<%= site.url %>">
   <meta property="og:image" content="<%= site.url %>/favicon.ico">
+  <meta property="og:image:type" content="image/vnd.microsoft.icon">
+  <meta property="og:image:width" content="256">
+  <meta property="og:image:height" content="256">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title><%= site.title %></title>
   <style><%- css.style -%></style>
