--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
 
 @mixin mobile{
   @media only screen and (max-width: 768px){
@@ -6,10 +6,10 @@
   }
 }
 
-$border-radius: .2rem;
+$basic-shadow: 0 2px 1rem rgba(0, 0, 0, .5);
 
 *{
-  color: #444;
+  color: #FFF;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 }
@@ -28,147 +28,122 @@ body{
   font-family: Montserrat, Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-footer{
-  width: 100%;
-  padding: .3rem 0;
-  background-color: #000;
-  color: #FFF;
-  font-size: .8rem;
-  text-align: center;
+.background{
+  background-image: url("/background.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 }
 
-main{
-  width: 100%;
-  padding: 2rem 10%;
-  background-color: #F5F5F5;
-  flex: 1;
-  z-index: 1;
-
-  @include mobile{
-    padding: 2rem 5%;
-  }
-}
-
-h1, h2{
-  margin: 0;
-  font-weight: 400;
-  text-transform: capitalize;
+.background-overlay{
+  background-color: rgba(0, 0, 0, .25);
+  backdrop-filter: blur(16px);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 }
 
 h1{
-  color: #333;
-  font-size: 1.6rem;
+  margin: 0 0 .5rem 0;
+  font-size: 2rem;
+  font-weight: 600;
 
   @include mobile{
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
 }
 
-h2{
-  color: #000;
-  font-size: 1.8rem;
-  line-height: 1;
-}
-
-.hero{
-  width: 100%;
-  height: 50vh;
-  padding: 0 4rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, .2);
-  position: relative;
+header{
+  margin-top: 4rem;
 
   @include mobile{
-    height: 30vh;
-    padding: 0 1rem;
-  }
-
-  &:before{
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-image: url("/background.png");
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: -1;
-  }
-
-  svg, p{
-    position: relative;
+    margin-top: 1rem;
   }
 
   svg{
-    height: 80px;
-    filter: drop-shadow(.1rem .1rem .7rem rgba(0, 0, 0, .5));
-
-    @include mobile{
-      height: 40px;
-    }
-  }
-
-  p{
-    margin: 1rem 0 0 0 ;
-    color: #FFF;
-    font-weight: 700;
-    letter-spacing: .1rem;
-    text-shadow: .1rem .1rem .7rem rgba(0, 0, 0, .5);
-
-    @include mobile{
-      font-size: .9rem;
-    }
-  }
-}
-
-.features{
-  margin: 2rem 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  grid-gap: 2rem;
-
-  @include mobile{
-    grid-template-columns: 1fr;
-    grid-gap: 1rem;
+    width: 85%;
+    margin: 0 auto;
+    display: block;
   }
 
   & > div{
-    padding: 1rem;
-    background-color: #FFF;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 .1rem 1rem rgba(0, 0, 0, .1);
-    border-radius: $border-radius;
+    margin-top: 2rem;
+    font-size: 3rem;
+    font-weight: 600;
+    text-align: center;
+    text-shadow: $basic-shadow;
 
-    p{
-      margin: 1rem 0 0 0;
+    @include mobile{
+      font-size: 1.5rem;
     }
   }
 }
 
-.btn{
-  padding: .5rem 1.5rem;
-  background-color: #000;
-  color: #FFF;
-  font-weight: 700;
-  text-decoration: none;
-  display: inline-block;
-  border-radius: $border-radius;
-  box-shadow: 0 .1rem .5rem rgba(0, 0, 0, .2);
-  cursor: pointer;
-  user-select: none;
-  transition: background-color .15s ease;
+main{
+  margin: 5rem 10rem;
 
-  &:hover{
-    background-color: #222;
+  @include mobile{
+    margin: 2rem .5rem;
+  }
+
+  h1{
+    text-shadow: $basic-shadow;
+  }
+
+  p{
+    margin: 0 0 2rem 0;
+    text-shadow: $basic-shadow;
+  }
+
+  .download{
+    padding: 1rem 2rem;
+    background-color: #000;
+    font-size: 1.25rem;
+    font-weight: 500;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
+
+    img{
+      width: 24px;
+      margin-right: 1rem;
+    }
+  }
+}
+
+.cards{
+  margin: 0 auto 1rem auto;
+  display: flex;
+  flex-direction: row;
+
+  @include mobile{
+    flex-direction: column;
+  }
+
+  & > div{
+    margin: 0 .5rem;
+    padding: 1rem 1.5rem;
+    background-color: #F5F5F5;
+
+    @include mobile{
+      margin: .5rem;
+    }
+
+    & > *{
+      color: #000;
+    }
   }
 }
